--- a/main.css
+++ b/main.css
@@ -10,8 +10,13 @@ body {
 	max-width: 390px;
     position: relative;
     display: flex;
-    
+    margin-top: 15px;
+    border-radius: 50%;
+}
 
+.container input {
+    border-radius: 10px;
+    width: 180px;
 }
 
 .inner {
