--- a/main.css
+++ b/main.css
@@ -15,8 +15,11 @@ body {
 }
 
 .container input {
-    border-radius: 10px;
-    width: 180px;
+    border-radius: 15px;
+    width: 190px;
+    padding: 15px;
+    font-size: 14px;
+    text-align: center;
 }
 
 .inner {
