--- a/main.css
+++ b/main.css
@@ -10,17 +10,9 @@ body {
     max-width: 390px;
     position: relative;
     display: flex;
-    justify-content: center; /* Центрирование по горизонтали */
-    align-items: center; /* Центрирование по вертикали */
+    flex-direction: column;
+    align-items: center;
     margin-top: 15px;
-}
-
-.container input {
-    border-radius: 15px;
-    width: 190px;
-    padding: 15px;
-    font-size: 14px;
-    text-align: center;
 }
 
 .container input {
@@ -35,8 +27,7 @@ body {
 .error-message {
     color: red;
     font-size: 12px;
-    margin-top: -10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
 }
 
 .input-error {
