--- a/main.css
+++ b/main.css
@@ -6,40 +6,30 @@ body {
 	background: var(--tg-theme-bg-color);
 }
 
-.container {
-    max-width: 390px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15px;
-}
-
 .container input {
     border-radius: 15px;
     width: 190px;
     padding: 15px;
     font-size: 14px;
     text-align: center;
-    margin-bottom: 5px;
     border: 1px solid #ccc; /* Default border color */
-}
-
-.error-message {
+  }
+  
+  .error-message {
     color: red;
     font-size: 12px;
     margin-top: 5px;
     display: block; /* Ensure the error message does not cause layout issues */
-}
-
-.input-error {
+    position: relative;
+  }
+  
+  .input-error {
     border-color: red;
-}
-
-/* Ensure that no extra space is added to the container */
-.container span.error-message {
-    display: block;
-}
+  }
+  
+  .container.error {
+    margin-bottom: 10px; /* Добавьте отступ при отображении ошибки */
+  }
 
 .inner {
 	display: grid;
