--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body {
 
 .container input {
     border-radius: 15px;
-    width: 189px;
+    width: 40%;
     padding: 15px;
     font-size: 14px;
     text-align: center;
