--- a/main.css
+++ b/main.css
@@ -64,15 +64,16 @@ body {
 
 .btn {
 	display: inline-block;
-	padding: 10px 20px;
+	padding: 10px 2vw;
+  width: 8vw;
 	border: none;
 	background: rgb(248, 168, 24);
 	border-radius: 10px;
 	color: #fff;
 	text-transform: uppercase;
-	font-weight: 700;
-
+	font-weight: 300;
 	transition: background .2s linear;
+  text-align: center;
 }
 
 .btn:hover {
