--- a/main.css
+++ b/main.css
@@ -65,11 +65,11 @@ body {
 .btn {
 	display: inline-block;
 	padding: 10px 5vw;
-  width: 70%;
-	border: none;
-	background: rgb(248, 168, 24);
+  width: 50%;
+	border: 1px solid #ccc;
+	background: #fff;
 	border-radius: 10px;
-	color: #fff;
+	color: black;
 	font-weight: 300;
 	transition: background .2s linear;
   text-align: center;
