--- a/main.css
+++ b/main.css
@@ -73,7 +73,8 @@ body {
 	font-weight: 300;
 	transition: background .2s linear;
   text-align: center;
-  margin-left: 15%;
+  margin-left: 13%;
+  cursor: pointer;
 }
 
 .btn:hover {
